syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package main;
option go_package = ".;proto";


service AnalyticsService {
  rpc RecordClick(ClickEvent) returns (google.protobuf.Empty);
  rpc GetStatistics(StatsRequest) returns (StatsResponse);
}


message ClickEvent{
  string shortCode = 1;
  google.protobuf.Timestamp clickedAt = 2;
  string ipAddress = 3;
  string userAgent = 4;
  string referer = 5;
  string country = 6;
}

message StatsRequest {
  string shortCode = 1;
}

message StatsResponse {
  string shortCode = 1;
  int64 totalClicks = 2;
  int64 uniqueVisitors = 3;
  optional google.protobuf.Timestamp clickedAt = 4;
}