syntax = "proto3";
import "google/protobuf/timestamp.proto";
package main;
option go_package = ".;proto";

service URLService {
  rpc CreateShortURL(CreateURLRequest) returns (CreateURLResponse);
  rpc GetOriginalURL(GetURLRequest) returns (GetURLResponse);
  rpc DeleteURL(DeleteURLRequest) returns (DeleteURLResponse);
}


message CreateURLRequest {
  string original_url = 1;
  google.protobuf.Timestamp expires_at = 2;
  optional string user_id = 3;
}

message CreateURLResponse{
  string short_code = 1;
}

message GetURLRequest {
  string short_code = 1;
}

message GetURLResponse {
  string original_url = 1;
  optional google.protobuf.Timestamp expires_at = 2;
}

message DeleteURLRequest {
  string short_code = 1;
}

message DeleteURLResponse {
  bool success = 1;
}


